--- a/employee-directory/src/App.css
+++ b/employee-directory/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.emp-header{
+  text-decoration: underline;
+  padding: 10px;
+  border: solid black 2px;
+}
