--- a/employee-directory/src/components/card/card.css
+++ b/employee-directory/src/components/card/card.css
@@ -1,4 +1,12 @@
-.card{
+.emp-card{
    padding: 10px;
    display: flex;
+   justify-content: space-around;
+   background-color: cornflowerblue;
+   border: lightblue solid 2px;
+   margin: 10px;
+   box-shadow: blue 2px 2px;
+   border-radius: 10px;
+   align-items: center;
+
 }
